[gd_scene load_steps=41 format=2]

[ext_resource path="res://imported_assets/bedroom/room_compyutah-2.webp" type="Texture" id=1]
[ext_resource path="res://Player/OverworldPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://ActionLevels/Room/Bedroom/Bedroom.gd" type="Script" id=3]
[ext_resource path="res://imported_assets/bedroom/room_pengwing-1.webp" type="Texture" id=4]
[ext_resource path="res://imported_assets/bedroom/room_lamp-1.webp" type="Texture" id=5]
[ext_resource path="res://imported_assets/bedroom/room_pillows-1.webp" type="Texture" id=6]
[ext_resource path="res://imported_assets/bedroom/room_gamecub-1.webp" type="Texture" id=7]
[ext_resource path="res://imported_assets/bedroom/room_piano-1.webp" type="Texture" id=8]
[ext_resource path="res://imported_assets/bedroom/room_plant-1.webp" type="Texture" id=9]
[ext_resource path="res://imported_assets/bedroom/room_TV-1.webp" type="Texture" id=10]
[ext_resource path="res://ActionLevels/Room/Bedroom/TV.gd" type="Script" id=12]
[ext_resource path="res://sounds/bedroom/Menu 1 - Super Smash Bros. Melee.mp3" type="AudioStream" id=13]
[ext_resource path="res://ActionLevels/Room/Bedroom/UseComputerArea.gd" type="Script" id=14]
[ext_resource path="res://ActionLevels/Room/ComputerScreen2D.tscn" type="PackedScene" id=15]
[ext_resource path="res://imported_assets/bedroom/room_background-light.webp" type="Texture" id=16]
[ext_resource path="res://imported_assets/bedroom/room_chair-1.webp" type="Texture" id=17]
[ext_resource path="res://imported_assets/bedroom/room_bed.webp" type="Texture" id=18]
[ext_resource path="res://imported_assets/bedroom/Blending_COLORDODGE.webp" type="Texture" id=19]

[sub_resource type="Shader" id=28]
code = "shader_type canvas_item;

uniform vec4 night_color : hint_color = vec4(1.0, 1.0, 1.4, 1.0); // A brighter and less saturated blue

void fragment() {
    COLOR = texture(SCREEN_TEXTURE, SCREEN_UV) * night_color;
}
"

[sub_resource type="ShaderMaterial" id=29]
shader = SubResource( 28 )
shader_param/night_color = Color( 0.2, 0.2, 0.4, 0.6 )

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
width = 1920
height = 1080

[sub_resource type="Shader" id=26]
code = "shader_type canvas_item;

void fragment() {
    vec4 screen_color = texture(SCREEN_TEXTURE, SCREEN_UV);
    vec4 sprite_color = texture(TEXTURE, UV);

    vec3 color_dodge;

    color_dodge.r = sprite_color.r < 1.0 ? min(screen_color.r / (1.0 - sprite_color.r), 1.0) : sprite_color.r;
    color_dodge.g = sprite_color.g < 1.0 ? min(screen_color.g / (1.0 - sprite_color.g), 1.0) : sprite_color.g;
    color_dodge.b = sprite_color.b < 1.0 ? min(screen_color.b / (1.0 - sprite_color.b), 1.0) : sprite_color.b;

    COLOR = vec4(color_dodge, sprite_color.a);
}
"

[sub_resource type="ShaderMaterial" id=27]
shader = SubResource( 26 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 48.1251, 76.2501 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 315, 453 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 136.25, 115 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 150, 82.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 96.25, 106.25 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 291.25, 67.4999 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 187.5, 168.75 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 93.75, 69.0625 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 256.25, 48.75 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 57.5001, 78.7498 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 25.5, 352.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 381, 12.5 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 21.5, 279.5 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 420, 17 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 97, 56.5 )

[node name="Bedroom" type="Node2D"]
script = ExtResource( 3 )

[node name="NightLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="NightLayer"]
material = SubResource( 29 )
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Blackbackground" type="Sprite" parent="."]
z_index = -2
texture = SubResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Room" type="Sprite" parent="."]
position = Vector2( 973, 521 )
scale = Vector2( 0.4, 0.4 )
z_index = -2
texture = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="YSort" type="YSort" parent="."]

[node name="WindowLightLayer" type="CanvasLayer" parent="YSort"]
layer = 0

[node name="WindowLight" type="Sprite" parent="YSort/WindowLightLayer"]
material = SubResource( 27 )
position = Vector2( 1119, 600 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 19 )

[node name="OverworldPlayer" parent="YSort" instance=ExtResource( 2 )]
unique_name_in_owner = true

[node name="PlayerLayer" type="CanvasLayer" parent="YSort"]

[node name="Lamp" type="Sprite" parent="YSort"]
position = Vector2( 671, 661 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/Lamp"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Lamp/StaticBody2D"]
position = Vector2( -4.37512, 133.75 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 8 )

[node name="TV" type="AnimatedSprite" parent="YSort"]
position = Vector2( 767, 645 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 5 )
script = ExtResource( 12 )

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/TV"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/TV/StaticBody2D"]
position = Vector2( 1.24988, -105 )
shape = SubResource( 6 )

[node name="TVArea2D" type="Area2D" parent="YSort/TV"]
unique_name_in_owner = true
position = Vector2( -0.00012207, 187.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/TV/TVArea2D"]
position = Vector2( -2.50037, 72.5 )
shape = SubResource( 18 )

[node name="TVAudio" type="AudioStreamPlayer" parent="YSort/TV"]
unique_name_in_owner = true
stream = ExtResource( 13 )
volume_db = -10.0

[node name="Pillows" type="Sprite" parent="YSort"]
position = Vector2( 794, 864 )
scale = Vector2( 0.4, 0.4 )
z_index = -1
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Penguin" type="Sprite" parent="YSort"]
position = Vector2( 877, 631 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Gamecube" type="Sprite" parent="YSort"]
position = Vector2( 879, 709 )
scale = Vector2( 0.4, 0.4 )
z_index = -1
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/Gamecube"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Gamecube/StaticBody2D"]
position = Vector2( -8.74976, -166.25 )
shape = SubResource( 7 )

[node name="Keyboard" type="Sprite" parent="YSort"]
position = Vector2( 1075, 851 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/Keyboard"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Keyboard/StaticBody2D"]
position = Vector2( 1.25024, -57.5 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 9 )

[node name="Duvet" type="Sprite" parent="YSort"]
position = Vector2( 1236, 499 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 18 )

[node name="BedStaticBody2D" type="StaticBody2D" parent="YSort/Duvet"]
position = Vector2( 9.99976, -177.5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Duvet/BedStaticBody2D"]
position = Vector2( -2.5, 73.7496 )
shape = SubResource( 11 )

[node name="DrawerStaticBody2D" type="StaticBody2D" parent="YSort"]
position = Vector2( 1122, 373 )
scale = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/DrawerStaticBody2D"]
position = Vector2( -26.25, -18.4375 )
shape = SubResource( 12 )

[node name="DeskStaticBody2D2" type="StaticBody2D" parent="YSort"]
position = Vector2( 905, 362 )
scale = Vector2( 0.4, 0.4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/DeskStaticBody2D2"]
position = Vector2( 131.25, -38.75 )
shape = SubResource( 13 )

[node name="Chair" type="Sprite" parent="YSort"]
position = Vector2( 955, 429 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 17 )

[node name="Plant" type="Sprite" parent="YSort"]
position = Vector2( 1256, 800 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/Plant"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Plant/StaticBody2D"]
position = Vector2( -0.000244141, 176.25 )
shape = SubResource( 10 )

[node name="Computer" type="Sprite" parent="YSort"]
position = Vector2( 979, 325 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="BoundaryRoom" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Left" type="CollisionShape2D" parent="BoundaryRoom"]
position = Vector2( 580.5, 577.5 )
shape = SubResource( 14 )

[node name="Top" type="CollisionShape2D" parent="BoundaryRoom"]
position = Vector2( 977, 370.5 )
shape = SubResource( 15 )

[node name="Right" type="CollisionShape2D" parent="BoundaryRoom"]
position = Vector2( 1371.5, 647.5 )
shape = SubResource( 16 )

[node name="Bottom" type="CollisionShape2D" parent="BoundaryRoom"]
position = Vector2( 974, 939 )
shape = SubResource( 17 )

[node name="ComputerScreen2D" parent="." instance=ExtResource( 15 )]
unique_name_in_owner = true
position = Vector2( 1238, 354 )

[node name="DesktopBackground" parent="ComputerScreen2D" index="0"]
position = Vector2( 175, -34 )

[node name="UseComputerArea" type="Area2D" parent="."]
position = Vector2( 959, 463 )
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="UseComputerArea"]
position = Vector2( 0, -46.5 )
shape = SubResource( 19 )

[editable path="ComputerScreen2D"]
